bpo-24048: Save the live exception during import.c's remove_module() (GH-13005)

Save the live exception during the course of remove_module().
(cherry picked from commit 94a64e9cd411a87514b68082c1c437eb3b49dfb9)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>